<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Book Club</string>
    <string name="categories">Categories</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="todo">TODO</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="by_bedo_habashi">By Bedo Habashi</string>
    <string name="login">Login</string>
    <string name="today_a_reader_ntomorrow_a_leader">Today a reader\nTomorrow a\nleader</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="create_account">Create\nAccount</string>
    <string name="create_new_account">Create Account</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="next_btn">Next</string>
    <string name="_1_3" tools:ignore="TypographyFractions">1/3</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="_2_3">2/3</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter One time code sent on</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want\nto reset your password</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password ?</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via mail:</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="new_credentials_detail">Your identity has been verified!\nSet your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="password_updated_success_message">YOUR PASSWORD HAS BEEN UPDATED</string>
    <string name="password_updated">PASSWORD\nUPDATED</string>
</resources>