<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="5dp"
    android:layout_marginBottom="6dp"
    android:elevation="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="110dp"
                    android:layout_height="130dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:scaleType="center"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pdfRl"
            android:fontFamily="@font/muli_black"
            android:text="@string/book_name"
            android:textColor="#363a5f"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/removeFavBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/heart_filled"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTv"
            android:layout_toEndOf="@+id/pdfRl"
            android:fontFamily="@font/muli_semibold"
            android:text="@string/author"
            android:textColor="#363a5f"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/muli_semibold"
            android:maxLines="1"
            android:text="@string/categories"
            android:textColor="#363a5f"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_toStartOf="@+id/categoryTv"
            android:layout_toEndOf="@+id/sizeTv"
            android:fontFamily="@font/muli_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/date"
            android:textColor="#363a5f"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sizeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/pdfRl"
            android:fontFamily="@font/muli_semibold"
            android:maxLines="1"
            android:text="@string/size"
            android:textColor="#363a5f"
            android:textSize="15sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
