<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FBFF"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/circle"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/today_a_reader_ntomorrow_a_leader"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="callLoginScreen"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle,UsingOnClickInXml" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="callSignUpScreen"
                android:padding="14dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle,UsingOnClickInXml" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>